# MCP-realtime-tech-docs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/livekit/agents/: models-overview-clean.txt  models-overview.txt  overview-clean.txt  overview.txt
docs/livekit/llm/: llm-overview-clean.txt  llm-overview.txt
docs/livekit/plugins/: plugins-list.txt
docs/livekit/realtime/: openai-realtime-clean.txt  openai-realtime.txt
docs/livekit/stt/: stt-overview-clean.txt  stt-overview.txt
docs/qwen/: 03-QWEN35-OMNI-BLOG.md  04-QWEN3-TTS.md  07-CODE-EXAMPLES.md
docs/qwen-realtime-official/: 00-OVERVIEW.md  01-REALTIME-WEBSOCKET-API.md  02-OFFLINE-HTTP-API.md  05-CLIENT-SERVER-EVENTS.md  06-VOICES.md
docs/qwen/models/: all-models-full.txt  huggingface-all.txt  huggingface-clean.txt  model-list-clean.txt  openrouter-qwen-clean.txt  openrouter-qwen.txt  pricing-guide-clean.txt
docs/qwen/omni/: omni-turbo-jina2.txt  qwen-omni.txt
docs/qwen/realtime/: omni-realtime.txt  realtime-jina2.txt
docs/qwen/speech-recognition/: asr-realtime.txt  asr-websocket.txt  qwen3-asr-github.txt
docs/qwen/tts-cosyvoice/: cosyvoice-jina2.txt  cosyvoice-python-api.txt  (+5 more)
docs/xiaomi-mimo/: 00-OVERVIEW.md  02-MIMO-V25-ARCHITECTURE.md  03-MIMO-V2-FLASH.md  04-MIMO-V25-PRO.md
docs/xiaomi-realtime-official/: 01-API-REFERENCE.md  05-TOKEN-PLAN.md  06-MIMO-TTS.md  07-CODE-EXAMPLES.md
index/: docs-index.json
scripts/: install.sh  update-docs.sh
src/: __init__.py  indexer.py  server.py
tests/: test_server.py
(+23 files in other folders)
